# nlp-coursera

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
assignment1/: CMakeLists.txt
assignment1/include/assignment1/: Data.hpp  DataParser.hpp  HiddenMarkovModel.hpp  Tagger.hpp
assignment1/src/: DataParser.cpp  HiddenMarkovModel.cpp  Tagger.cpp  main.cpp
data/: gene.key.counts
include/assignment1/: Data.hpp  DataParser.hpp
src/: Data.cpp  DataParser.cpp  main.cpp
